Remove Ethereum subscriptions
